# budgetcli

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
src/budgetcli/: budget.py  main.py  models.py
tests/: test_accounts.py  test_models.py
