[project]
name = "budgetcli"
version = "0.0.1"
authors = [
  { name="Madalin Popa", email="contact@madalinpopa.com" },
]
description = "A personal budgeting application"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
