[metadata]
name = budgetcli
version = 0.0.1
description = Personal budgeting app in terminal
long_description = file: README.rst
keywords = python, budgeting
license = MIT
classifiers =
    Topic :: Utilities
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
exclude =
    docs*
    tests*

[options.entry_points]
console_scripts =
    budget = budgetcli.main:main
